Fixed Modal Form Overflow

--- a/src/main.scss
+++ b/src/main.scss
@@ -9,6 +9,7 @@ $colors: (
 
 $tablet-width: 768px;
 $font: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+$modal-padding: 60px;
 
 @mixin font {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -35,6 +36,17 @@ body {
   margin: 0;
 }
 
+button,
+input[type="submit"] {
+  background-color: green;
+  border: 2px solid darkgreen;
+  background-image: radial-gradient(forestgreen, green);
+  border-radius: 100px;
+  padding-bottom: 4px;
+  @include font;
+  cursor: pointer;
+}
+
 #game-container {
   width: 100%;
   margin: auto;
@@ -55,20 +67,38 @@ body {
   display: inline;
 }
 
-.modal-container {
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
-  padding-top: 60px;
+#reset {
+  float: right;
+  margin-top: 8px;
+  font-size: 20px;
+  color: white;
 }
 
+#board {
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  width: 100%;
+}
+
+/* Promotion Form */
 .modal {
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-wrapper {
+  max-height: calc(100vh - #{$modal-padding});
+  overflow-y: auto;
+  padding-top: $modal-padding;
+}
+
+.modal-content {
   margin-top: 10%;
   width: 300px;
   @include tablet {
@@ -105,28 +135,4 @@ body {
     margin-top: 10px;
     margin-left: 10px;
   }
-}
-
-button,
-input[type="submit"] {
-  background-color: green;
-  border: 2px solid darkgreen;
-  background-image: radial-gradient(forestgreen, green);
-  border-radius: 100px;
-  padding-bottom: 4px;
-  @include font;
-  cursor: pointer;
-}
-
-#reset {
-  float: right;
-  margin-top: 8px;
-  font-size: 20px;
-  color: white;
-}
-
-#board {
-  display: grid;
-  grid-template-columns: repeat(8, 1fr);
-  width: 100%;
 }
